# kobold

./: README.md  pyproject.toml
kobold/: core.py
scripts/: upload.sh
